--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
   <link href="bootstrap.min.css">
 </head>
 
-<body>
-  <app-root></app-root>
+<body class="bg-light">
+  <app-root ></app-root>
 </body>
 
 </html>
